Import of RJBS/Data-Rx-0.002 from CPAN.
gitpan-cpan-distribution: Data-Rx
gitpan-cpan-version:      0.002
gitpan-cpan-path:         RJBS/Data-Rx-0.002.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -10,9 +10,10 @@ requires:
   File::Find::Rule: 0
   JSON::XS: 0
   List::Util: 0
+  Module::Pluggable: 3.7
   Module::Pluggable::Object: 0
   Number::Tolerant: 0
   Scalar::Util: 0
   Test::More: 0
   autodie: 0
-version: 0.001
+version: 0.002
