--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Data-Rx
-version = 0.001
+version = 0.002
 author  = Ricardo SIGNES <rjbs@cpan.org>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
@@ -9,6 +9,7 @@ Carp = 0
 File::Find::Rule = 0
 JSON::XS = 0
 List::Util = 0
+Module::Pluggable = 3.7
 Module::Pluggable::Object = 0
 Number::Tolerant = 0
 Scalar::Util = 0
