--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,23 @@
---- 
-abstract: perl implementation of Rx schema system
-author: 
-  - Ricardo SIGNES <rjbs@cpan.org>
-generated_by: Dist::Zilla::Plugin::MetaYaml version 0.005
-license: perl
-name: Data-Rx
-requires: 
-  Carp: 0
-  File::Find::Rule: 0
-  JSON::XS: 0
-  List::Util: 0
-  Module::Pluggable: 3.7
-  Module::Pluggable::Object: 0
-  Number::Tolerant: 0
-  Scalar::Util: 0
-  Test::More: 0
-  autodie: 0
-version: 0.002
+--- #YAML:1.0
+name:                Data-Rx
+version:             0.003
+abstract:            perl implementation of Rx schema system
+license:             perl
+author:              
+    - Ricardo\ SIGNES\ \<rjbs\@cpan\.org\>
+generated_by:        ExtUtils::MakeMaker version 6.44
+distribution_type:   module
+requires:     
+    autodie:                       0
+    Carp:                          0
+    File::Find::Rule:              0
+    JSON::XS:                      0
+    List::Util:                    0
+    Module::Pluggable:             3.7
+    Module::Pluggable::Object:     0
+    Number::Tolerant:              0
+    Scalar::Util:                  0
+    Test::More:                    0
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
