--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,18 @@
---- 
-abstract: perl implementation of Rx schema system
-author: 
-  - Ricardo SIGNES <rjbs@cpan.org>
-generated_by: Dist::Zilla::Plugin::MetaYaml version 1.004
+---
+abstract: 'perl implementation of Rx schema system'
+author:
+  - 'Ricardo SIGNES <rjbs@cpan.org>'
+generated_by: 'Dist::Zilla version 1.100060'
 license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: Data-Rx
-requires: 
+requires:
   Carp: 0
+  ExtUtils::MakeMaker: 6.11
   File::Find::Rule: 0
-  JSON::XS: 0
+  JSON: 2
   List::Util: 0
   Module::Pluggable: 3.7
   Module::Pluggable::Object: 0
@@ -16,4 +20,6 @@ requires:
   Scalar::Util: 0
   Test::More: 0
   autodie: 0
-version: 0.007
+resources:
+  repository: ~
+version: 0.100110
