--- a/META.yml
+++ b/META.yml
@@ -2,7 +2,17 @@
 abstract: 'perl implementation of Rx schema system'
 author:
   - 'Ricardo SIGNES <rjbs@cpan.org>'
-generated_by: 'Dist::Zilla version 1.100060'
+build_requires:
+  File::Find::Rule: 0
+  JSON: 0
+  Test::Deep::NoTest: 0
+  Test::More: 0.96
+  Try::Tiny: 0
+  autodie: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.30
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.300012, CPAN::Meta::Converter version 2.120900'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -10,7 +20,6 @@ meta-spec:
 name: Data-Rx
 requires:
   Carp: 0
-  ExtUtils::MakeMaker: 6.11
   File::Find::Rule: 0
   JSON: 2
   List::Util: 0
@@ -20,6 +29,178 @@ requires:
   Scalar::Util: 0
   Test::More: 0
   autodie: 0
+  base: 0
+  overload: 0
+  strict: 0
+  warnings: 0
 resources:
-  repository: ~
-version: 0.100110
+  homepage: https://github.com/rjbs/rx
+  repository: https://github.com/rjbs/rx.git
+version: 0.200000
+x_Dist_Zilla:
+  plugins:
+    -
+      class: Dist::Zilla::Plugin::Prereqs
+      config:
+        Dist::Zilla::Plugin::Prereqs:
+          phase: runtime
+          type: requires
+      name: Prereqs
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::CheckPrereqsIndexed
+      name: '@Filter/CheckPrereqsIndexed'
+      version: 0.007
+    -
+      class: Dist::Zilla::Plugin::GatherDir
+      name: '@Filter/@Basic/GatherDir'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::PruneCruft
+      name: '@Filter/@Basic/PruneCruft'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::ManifestSkip
+      name: '@Filter/@Basic/ManifestSkip'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::MetaYAML
+      name: '@Filter/@Basic/MetaYAML'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::License
+      name: '@Filter/@Basic/License'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::Readme
+      name: '@Filter/@Basic/Readme'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::ExtraTests
+      name: '@Filter/@Basic/ExtraTests'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::ExecDir
+      name: '@Filter/@Basic/ExecDir'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::ShareDir
+      name: '@Filter/@Basic/ShareDir'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::MakeMaker
+      name: '@Filter/@Basic/MakeMaker'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::Manifest
+      name: '@Filter/@Basic/Manifest'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::TestRelease
+      name: '@Filter/@Basic/TestRelease'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::ConfirmRelease
+      name: '@Filter/@Basic/ConfirmRelease'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::UploadToCPAN
+      name: '@Filter/@Basic/UploadToCPAN'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::AutoPrereqs
+      name: '@Filter/AutoPrereqs'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::PkgVersion
+      name: '@Filter/PkgVersion'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::MetaConfig
+      name: '@Filter/MetaConfig'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::MetaJSON
+      name: '@Filter/MetaJSON'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::NextRelease
+      name: '@Filter/NextRelease'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::PodSyntaxTests
+      name: '@Filter/PodSyntaxTests'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::Repository
+      name: '@Filter/Repository'
+      version: 0.18
+    -
+      class: Dist::Zilla::Plugin::Prereqs
+      config:
+        Dist::Zilla::Plugin::Prereqs:
+          phase: test
+          type: requires
+      name: '@Filter/TestMoreWithSubtests'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::PodWeaver
+      name: '@Filter/PodWeaver'
+      version: 3.101641
+    -
+      class: Dist::Zilla::Plugin::GithubMeta
+      name: '@Filter/GithubMeta'
+      version: 0.28
+    -
+      class: Dist::Zilla::Plugin::Git::Check
+      name: '@Filter/@Git/Check'
+      version: 1.120860
+    -
+      class: Dist::Zilla::Plugin::Git::Commit
+      name: '@Filter/@Git/Commit'
+      version: 1.120860
+    -
+      class: Dist::Zilla::Plugin::Git::Push
+      name: '@Filter/@Git/Push'
+      version: 1.120860
+    -
+      class: Dist::Zilla::Plugin::Git::Tag
+      name: Git::Tag
+      version: 1.120860
+    -
+      class: Dist::Zilla::Plugin::Git::NextVersion
+      name: Git::NextVersion
+      version: 1.120860
+    -
+      class: Dist::Zilla::Plugin::GatherDir
+      name: GatherDir
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':InstallModules'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':IncModules'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':TestFiles'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ExecFiles'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ShareFiles'
+      version: 4.300012
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':MainModule'
+      version: 4.300012
+  zilla:
+    class: Dist::Zilla::Dist::Builder
+    config:
+      is_trial: 1
+    version: 4.300012
