--- a/spec/schemata/invalid/int-unknown-arg.json
+++ b/spec/schemata/invalid/int-unknown-arg.json
@@ -1,4 +1,8 @@
 {
   "invalid": true,
-  "schema" : { "type": "//int", "unknown": "this will make things explode" }
+
+  "schema" : {
+    "type"    : "//int",
+    "unknown" : "this will cause to things explode"
+  }
 }
