--- a/META.yml
+++ b/META.yml
@@ -3,7 +3,9 @@ abstract: 'perl implementation of Rx schema system'
 author:
   - 'Ricardo SIGNES <rjbs@cpan.org>'
 build_requires:
+  File::Find: 0
   File::Find::Rule: 0
+  File::Temp: 0
   JSON: 0
   Test::Deep::NoTest: 0
   Test::More: 0.96
@@ -12,7 +14,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300020, CPAN::Meta::Converter version 2.120630'
+generated_by: 'Dist::Zilla version 4.300022, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -36,7 +38,7 @@ requires:
 resources:
   homepage: https://github.com/rjbs/rx
   repository: https://github.com/rjbs/rx.git
-version: 0.200001
+version: 0.200002
 x_Dist_Zilla:
   plugins:
     -
@@ -46,7 +48,7 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::Git::GatherDir
       name: '@Filter/Git::GatherDir'
@@ -62,75 +64,87 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Filter/@Filter/PruneCruft'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Filter/@Filter/ManifestSkip'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Filter/@Filter/MetaYAML'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::License
       name: '@Filter/@Filter/License'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Filter/@Filter/Readme'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Filter/@Filter/ExecDir'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Filter/@Filter/ShareDir'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Filter/@Filter/MakeMaker'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Filter/@Filter/Manifest'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Filter/@Filter/TestRelease'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Filter/@Filter/ConfirmRelease'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Filter/@Filter/UploadToCPAN'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Filter/AutoPrereqs'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Filter/PkgVersion'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Filter/MetaConfig'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Filter/MetaJSON'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@Filter/NextRelease'
-      version: 4.300020
+      version: 4.300022
+    -
+      class: Dist::Zilla::Plugin::Test::ChangesHasContent
+      name: '@Filter/Test::ChangesHasContent'
+      version: 0.006
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Filter/PodSyntaxTests'
-      version: 4.300020
+      version: 4.300022
+    -
+      class: Dist::Zilla::Plugin::Test::Compile
+      name: '@Filter/Test::Compile'
+      version: 1.112820
+    -
+      class: Dist::Zilla::Plugin::ReportVersions::Tiny
+      name: '@Filter/ReportVersions::Tiny'
+      version: 1.05
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -138,7 +152,7 @@ x_Dist_Zilla:
           phase: test
           type: requires
       name: '@Filter/TestMoreWithSubtests'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::PodWeaver
       name: '@Filter/PodWeaver'
@@ -170,33 +184,33 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: GatherDir
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300020
+      version: 4.300022
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300020
+      version: 4.300022
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
-      is_trial: 1
-    version: 4.300020
+      is_trial: 0
+    version: 4.300022
