--- a/META.yml
+++ b/META.yml
@@ -3,10 +3,8 @@ abstract: 'perl implementation of Rx schema system'
 author:
   - 'Ricardo SIGNES <rjbs@cpan.org>'
 build_requires:
-  File::Find: 0
   File::Find::Rule: 0
-  File::Temp: 0
-  JSON: 0
+  JSON: 2
   Test::Deep::NoTest: 0
   Test::More: 0.96
   Try::Tiny: 0
@@ -15,7 +13,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300036, CPAN::Meta::Converter version 2.131560'
+generated_by: 'Dist::Zilla version 5.007, CPAN::Meta::Converter version 2.133380'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -26,11 +24,9 @@ requires:
   File::Find::Rule: 0
   JSON: 2
   List::Util: 0
-  Module::Pluggable: 3.7
-  Module::Pluggable::Object: 0
   Number::Tolerant: 0
   Scalar::Util: 0
-  Test::More: 0
+  Test::More: 0.96
   autodie: 0
   overload: 0
   parent: 0
@@ -40,10 +36,10 @@ resources:
   bugtracker: https://github.com/rjbs/rx/issues
   homepage: https://github.com/rjbs/rx
   repository: https://github.com/rjbs/rx.git
-version: 0.200004
+version: 0.200005
 x_Dist_Zilla:
   perl:
-    version: 5.019001
+    version: 5.018001
   plugins:
     -
       class: Dist::Zilla::Plugin::Prereqs
@@ -52,11 +48,11 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::Git::GatherDir
       name: '@Filter/Git::GatherDir'
-      version: 2.014
+      version: 2.019
     -
       class: Dist::Zilla::Plugin::CheckPrereqsIndexed
       name: '@Filter/CheckPrereqsIndexed'
@@ -64,75 +60,98 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::CheckExtraTests
       name: '@Filter/CheckExtraTests'
-      version: 0.011
+      version: 0.016
+    -
+      class: Dist::Zilla::Plugin::PromptIfStale
+      config:
+        Dist::Zilla::Plugin::PromptIfStale:
+          check_all_plugins: 0
+          check_all_prereqs: 0
+          modules:
+            - Dist::Zilla::PluginBundle::RJBS
+          phase: build
+          skip: []
+      name: '@Filter/RJBS-Outdated'
+      version: 0.015
+    -
+      class: Dist::Zilla::Plugin::PromptIfStale
+      config:
+        Dist::Zilla::Plugin::PromptIfStale:
+          check_all_plugins: 1
+          check_all_prereqs: 0
+          modules: []
+          phase: release
+          skip: []
+      name: '@Filter/CPAN-Outdated'
+      version: 0.015
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Filter/@Filter/PruneCruft'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Filter/@Filter/ManifestSkip'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Filter/@Filter/MetaYAML'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::License
       name: '@Filter/@Filter/License'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Filter/@Filter/Readme'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Filter/@Filter/ExecDir'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Filter/@Filter/ShareDir'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Filter/@Filter/MakeMaker'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Filter/@Filter/Manifest'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Filter/@Filter/TestRelease'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Filter/@Filter/ConfirmRelease'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Filter/@Filter/UploadToCPAN'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Filter/AutoPrereqs'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Filter/PkgVersion'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Filter/MetaConfig'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Filter/MetaJSON'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@Filter/NextRelease'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::Test::ChangesHasContent
       name: '@Filter/Test::ChangesHasContent'
@@ -140,15 +159,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Filter/PodSyntaxTests'
-      version: 4.300036
-    -
-      class: Dist::Zilla::Plugin::Test::Compile
-      name: '@Filter/Test::Compile'
-      version: 2.002
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::ReportVersions::Tiny
       name: '@Filter/ReportVersions::Tiny'
-      version: 1.08
+      version: 1.10
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -156,65 +171,144 @@ x_Dist_Zilla:
           phase: test
           type: requires
       name: '@Filter/TestMoreWithSubtests'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::PodWeaver
+      config:
+        Dist::Zilla::Plugin::PodWeaver:
+          config_plugin: '@RJBS'
+          finder:
+            - ':InstallModules'
+            - ':ExecFiles'
+          plugins:
+            -
+              class: Pod::Weaver::Plugin::EnsurePod5
+              name: '@CorePrep/EnsurePod5'
+              version: 4.005
+            -
+              class: Pod::Weaver::Plugin::H1Nester
+              name: '@CorePrep/H1Nester'
+              version: 4.005
+            -
+              class: Pod::Weaver::Plugin::SingleEncoding
+              name: '@RJBS/SingleEncoding'
+              version: 4.005
+            -
+              class: Pod::Weaver::Section::Name
+              name: '@RJBS/Name'
+              version: 4.005
+            -
+              class: Pod::Weaver::Section::Version
+              name: '@RJBS/Version'
+              version: 4.005
+            -
+              class: Pod::Weaver::Section::Region
+              name: '@RJBS/Prelude'
+              version: 4.005
+            -
+              class: Pod::Weaver::Section::Generic
+              name: '@RJBS/Synopsis'
+              version: 4.005
+            -
+              class: Pod::Weaver::Section::Generic
+              name: '@RJBS/Description'
+              version: 4.005
+            -
+              class: Pod::Weaver::Section::Generic
+              name: '@RJBS/Overview'
+              version: 4.005
+            -
+              class: Pod::Weaver::Section::Generic
+              name: '@RJBS/Stability'
+              version: 4.005
+            -
+              class: Pod::Weaver::Section::Collect
+              name: Attributes
+              version: 4.005
+            -
+              class: Pod::Weaver::Section::Collect
+              name: Methods
+              version: 4.005
+            -
+              class: Pod::Weaver::Section::Collect
+              name: Functions
+              version: 4.005
+            -
+              class: Pod::Weaver::Section::Leftovers
+              name: '@RJBS/Leftovers'
+              version: 4.005
+            -
+              class: Pod::Weaver::Section::Region
+              name: '@RJBS/postlude'
+              version: 4.005
+            -
+              class: Pod::Weaver::Section::Authors
+              name: '@RJBS/Authors'
+              version: 4.005
+            -
+              class: Pod::Weaver::Section::Legal
+              name: '@RJBS/Legal'
+              version: 4.005
+            -
+              class: Pod::Weaver::Plugin::Transformer
+              name: '@RJBS/List'
+              version: 4.005
       name: '@Filter/PodWeaver'
-      version: 3.101641
+      version: 4.002
     -
       class: Dist::Zilla::Plugin::GithubMeta
       name: '@Filter/GithubMeta'
-      version: 0.28
+      version: 0.42
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Filter/@Git/Check'
-      version: 2.014
+      version: 2.019
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: '@Filter/@Git/Commit'
-      version: 2.014
+      version: 2.019
     -
       class: Dist::Zilla::Plugin::Git::Push
       name: '@Filter/@Git/Push'
-      version: 2.014
+      version: 2.019
     -
       class: Dist::Zilla::Plugin::Git::Tag
       name: Git::Tag
-      version: 2.014
+      version: 2.019
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
       name: Git::NextVersion
-      version: 2.014
+      version: 2.019
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: GatherDir
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300036
+      version: 5.007
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300036
+      version: 5.007
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.300036
+    version: 5.007
